--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^5.1.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "@react-native-picker/picker": "2.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
