--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "vercel-build": "expo export --platform web",
     "web": "expo start --web",
-    "lint": "expo lint",
-    "vercel-build": "expo export:web"
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
